improved StealthMine.java
- rewrote the module
- swapping methods fully work
- improved breaking logic

improved AutoSand.java

- made support work with height change
- added better placement logic